--- a/package01/package.json
+++ b/package01/package.json
@@ -1,5 +1,6 @@
 {
   "name": "@shaunluttin/package01",
   "version": "1.0.0",
-  "main": "index.js"
+  "main": "index.js",
+  "types": "index.d.ts"
 }
